# cmake-template

./: .gitignore  CMakeLists.txt  CMakeSettings.json
cmake/: compiler_options.cmake  external_projects.cmake
test/: CMakeLists.txt
test/example/: boost_test.cpp  catch_test.cpp  flatbuffers_test.cpp  gtest_test.cpp  spdlog_test.cpp  yaml_test.cpp  zmq_test.cpp
test/example/fbs/: monster.fbs
